[package]
name = "modul_core"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Currently just reserved, planning to create a simple game/app engine based on bevy_ecs"

[dependencies]
bevy_app = "0.15"
bevy_ecs = "0.15"
wgpu = "24.0"
winit = "0.30"
env_logger = "0.11"
pollster = "0.4"
hashbrown = "0.15"

